--- a/data_process.ipynb
+++ b/data_process.ipynb
@@ -701,178 +701,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_data = pd.read_csv(os.path.join(\"text\", \"pre_train.csv\"))\n",
-    "train, val = train_test_split(train_data, test_size=0.2, shuffle=True, random_state=42)\n",
+    "train, val = train_test_split(train_data, train_size=0.8, shuffle=True, random_state=42)\n",
     "test = pd.read_csv(os.path.join(\"text\", \"pre_test.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>location</th>\n",
-       "      <th>text</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4996</th>\n",
-       "      <td>7128</td>\n",
-       "      <td>military</td>\n",
-       "      <td>Texas</td>\n",
-       "      <td>courageous and honest analysis of need to use ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3263</th>\n",
-       "      <td>4688</td>\n",
-       "      <td>engulfed</td>\n",
-       "      <td>UNK</td>\n",
-       "      <td>zachzaidman 670thescore old b a shame if that ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4907</th>\n",
-       "      <td>6984</td>\n",
-       "      <td>massacre</td>\n",
-       "      <td>Cottonwood Arizona</td>\n",
-       "      <td>tell barackobama to rescind medals of honor gi...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2855</th>\n",
-       "      <td>4103</td>\n",
-       "      <td>drought</td>\n",
-       "      <td>Spokane, WA</td>\n",
-       "      <td>worried about how the ca drought might affect ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4716</th>\n",
-       "      <td>6706</td>\n",
-       "      <td>lava</td>\n",
-       "      <td>Medan,Indonesia</td>\n",
-       "      <td>youngheroesid lava blast amp power red panther...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5226</th>\n",
-       "      <td>7470</td>\n",
-       "      <td>obliteration</td>\n",
-       "      <td>Merica!</td>\n",
-       "      <td>eganator2000 there agent many obliteration ser...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5390</th>\n",
-       "      <td>7691</td>\n",
-       "      <td>panic</td>\n",
-       "      <td>UNK</td>\n",
-       "      <td>just had a panic attack bc i dont have enough ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>860</th>\n",
-       "      <td>1242</td>\n",
-       "      <td>blood</td>\n",
-       "      <td>UNK</td>\n",
-       "      <td>common hem712c automatic blood pressure monito...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7603</th>\n",
-       "      <td>10862</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>UNK</td>\n",
-       "      <td>officials say a quarante is in place at an ala...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7270</th>\n",
-       "      <td>10409</td>\n",
-       "      <td>whirlwind</td>\n",
-       "      <td>Stamford &amp; Cork (&amp; Shropshire)</td>\n",
-       "      <td>i moved to england five years ago today what a...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6090 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id       keyword                        location   \n",
-       "4996   7128      military                           Texas  \\\n",
-       "3263   4688      engulfed                             UNK   \n",
-       "4907   6984      massacre              Cottonwood Arizona   \n",
-       "2855   4103       drought                     Spokane, WA   \n",
-       "4716   6706          lava                 Medan,Indonesia   \n",
-       "...     ...           ...                             ...   \n",
-       "5226   7470  obliteration                         Merica!   \n",
-       "5390   7691         panic                             UNK   \n",
-       "860    1242         blood                             UNK   \n",
-       "7603  10862       unknown                             UNK   \n",
-       "7270  10409     whirlwind  Stamford & Cork (& Shropshire)   \n",
-       "\n",
-       "                                                   text  target  \n",
-       "4996  courageous and honest analysis of need to use ...       1  \n",
-       "3263  zachzaidman 670thescore old b a shame if that ...       0  \n",
-       "4907  tell barackobama to rescind medals of honor gi...       1  \n",
-       "2855  worried about how the ca drought might affect ...       1  \n",
-       "4716  youngheroesid lava blast amp power red panther...       0  \n",
-       "...                                                 ...     ...  \n",
-       "5226  eganator2000 there agent many obliteration ser...       0  \n",
-       "5390  just had a panic attack bc i dont have enough ...       0  \n",
-       "860   common hem712c automatic blood pressure monito...       0  \n",
-       "7603  officials say a quarante is in place at an ala...       1  \n",
-       "7270  i moved to england five years ago today what a...       1  \n",
-       "\n",
-       "[6090 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "def token_dependency(dataset):\n",
+    "    res = []\n",
+    "    for index, sample in enumerate(dataset['text']):\n",
+    "        dataset_article = {}\n",
+    "        dataset_article_a = {}\n",
+    "        doc = nlp(sample)\n",
+    "        dataset_article[\"token_caption\"] = [(token.text.lower(),token.i,token.head.i, token.is_punct) for token in doc]\n",
+    "        dataset_article[\"chunk\"] =  [(chunk.text.lower(),chunk.start,chunk.end) for chunk in doc.noun_chunks]\n",
+    "        token_sample,token_map = re_organize_caption(dataset_article[\"token_caption\"],dataset_article[\"chunk\"])\n",
+    "        dependency = [(token_map[t[1]],token_map[t[2]]) for t in dataset_article[\"token_caption\"] if (not (token_map[t[1]]) == token_map[t[2]]) and \n",
+    "                      (not t[3])]\n",
+    "        \n",
+    "        dataset_article_a[\"chunk_cap\"] = token_sample\n",
+    "        dataset_article_a[\"token_cap\"] = [t[0] for t in dataset_article[\"token_caption\"]]\n",
+    "        \n",
+    "        dataset_article_a[\"token_dep\"] = [(t[1],t[2]) for t in dataset_article[\"token_caption\"] if (not t[1] == t[2]) and (not t[3]) and t[0]!=\" \" \n",
+    "                                          and dataset_article[\"token_caption\"][t[2]][0]!= \" \"]\n",
+    "        dataset_article_a[\"chunk_dep\"] = dependency\n",
+    "        \n",
+    "        dataset_article_a[\"chunk\"] = [temp[0] for temp in dataset_article[\"chunk\"]]\n",
+    "        dataset_article_a[\"chunk_index\"] = [token_map[temp[1]] for temp in dataset_article[\"chunk\"]]\n",
+    "        \n",
+    "        dataset_article_a[\"label\"] = dataset.iloc[index][\"target\"]\n",
+    "        res.append(dataset_article_a)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_res = token_dependency(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_pd = pd.DataFrame(val_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_pd.to_excel(\"test_.xlsx\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "# 根日志器默认日志级别为WARNING，这里将其重置，以保证debug、info级别的日志也能输出\n",
+    "logging.basicConfig(filename=\"deal.log\", filemode=\"w\",level=logging.NOTSET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.info(\"This is an message.\")"
+   ]
   },
   {
    "cell_type": "code",
